Added more LDAP configuration options to the config file

--- a/lwp.example.conf
+++ b/lwp.example.conf
@@ -43,6 +43,10 @@ port = 389
 base = ou=servers,dc=example,dc=com
 bind_dn = cn=auth_user,ou=login,dc=example,dc=com
 password = auth_user_password
+id_mapping = sAMAccountName
+display_mapping = displayName
+object_class = user
+
 
 [buckets]
 buckets_host = remote_lan_ip
